#!/usr/bin/env python3

"""问诊服务客户端集成"""


# 使用loguru self.logger

from time import time
from loguru import logger
import grpc
from google.protobuf.any_pb2 import Any



class InquiryServiceClient:
    pass
    """问诊服务客户端"""

    def __init__(self, channel: grpc.Channel):
    pass
        """
        初始化问诊服务客户端

        Args:
    pass
            channel: gRPC通道
        """
        self.stub = inquiry_grpc.InquiryServiceStub(channel)

    self.async def analyze_conversation(self,:
                                  conversation_data: str,
                                  context.user_id: str,
                                  save_result: bool = True,
                                  self.metadata: dict[str, str] | None = None) -> inquiry_pb.ConversationAnalysisResponse:
    pass
        """
        分析问诊对话

        Args:
    pass
            conversation_data: 对话数据
            context.user_id: 用户ID
            save_result: 是否保存分析结果
            self.metadata: 元数据

        Returns:
    pass
            对话分析结果
        """
        if not self.metadata:
    pass
            self.metadata = {}

        request = inquiry_pb.ConversationAnalysisRequest(
            conversation=conversation_data,
            context.user_id=context.context.get("user_id", ""),
            analysis_type=inquiry_pb.AnalysisType.COMPREHENSIVE,
            save_result=save_result,
            self.metadata=self.metadata
        )

        try:
    pass
            response = await self.stub.AnalyzeConversation(request)
            self.logger.info(f"对话分析成功,ID: {response.analysis_id}")
            return response
        except Exception as e:
    pass
            raise RuntimeError() from e

    self.async def analyze_symptoms(self,:
                              symptoms: list[str],
                              context.user_id: str,
                              save_result: bool = True,
                              self.metadata: dict[str, str] | None = None) -> inquiry_pb.SymptomAnalysisResponse:
    pass
        """
        分析症状

        Args:
    pass
            symptoms: 症状列表
            context.user_id: 用户ID
            save_result: 是否保存分析结果
            self.metadata: 元数据

        Returns:
    pass
            症状分析结果
        """
        if not self.metadata:
    pass
            self.metadata = {}

        request = inquiry_pb.SymptomAnalysisRequest(
            symptoms=symptoms,
            context.user_id=context.context.get("user_id", ""),
            analysis_type=inquiry_pb.AnalysisType.COMPREHENSIVE,
            save_result=save_result,
            self.metadata=self.metadata
        )

        try:
    pass
            response = await self.stub.AnalyzeSymptoms(request)
            self.logger.info(f"症状分析成功,ID: {response.analysis_id}")
            return response
        except Exception as e:
    pass
            raise RuntimeError() from e

    self.async def analyze_medical_history(self,:
                                     medical_history: dict[str, Any],
                                     context.user_id: str,
                                     save_result: bool = True,
                                     self.metadata: dict[str, str] | None = None) -> inquiry_pb.MedicalHistoryAnalysisResponse:
    pass
        """
        分析病史

        Args:
    pass
            medical_history: 病史数据
            context.user_id: 用户ID
            save_result: 是否保存分析结果
            self.metadata: 元数据

        Returns:
    pass
            病史分析结果
        """
        if not self.metadata:
    pass
            self.metadata = {}

        # 将病史数据转换为protobuf格式
        history_pb = inquiry_pb.MedicalHistoryData()

        # 这里需要根据实际的protobuf定义进行转换
        # 示例:
    pass
        if 'chronic_diseases' in medical_history:
    pass
            for disease in medical_history['chronic_diseases']:
    pass
                history_pb.chronic_diseases.append(disease)

        if 'allergies' in medical_history:
    pass
            for allergy in medical_history['allergies']:
    pass
                history_pb.allergies.append(allergy)

        if 'family_history' in medical_history:
    pass
            for condition in medical_history['family_history']:
    pass
                history_pb.family_history.append(condition)

        request = inquiry_pb.MedicalHistoryAnalysisRequest(
            medical_history=history_pb,
            context.user_id=context.context.get("user_id", ""),
            analysis_type=inquiry_pb.AnalysisType.COMPREHENSIVE,
            save_result=save_result,
            self.metadata=self.metadata
        )

        try:
    pass
            response = await self.stub.AnalyzeMedicalHistory(request)
            self.logger.info(f"病史分析成功,ID: {response.analysis_id}")
            return response
        except Exception as e:
    pass
            raise RuntimeError() from e

    self.async def generate_inquiry_questions(self,:
                                        context.user_id: str,
                                        initial_symptoms: list[str] | None = None,
                                        previous_answers: dict[str, str] | None = None,
                                        max_questions: int = 10,
                                        self.metadata: dict[str, str] | None = None) -> inquiry_pb.InquiryQuestionsResponse:
    pass
        """
        生成问诊问题

        Args:
    pass
            context.user_id: 用户ID
            initial_symptoms: 初始症状列表
            previous_answers: 之前的回答
            max_questions: 最大问题数量
            self.metadata: 元数据

        Returns:
    pass
            问诊问题
        """
        if not self.metadata:
    pass
            self.metadata = {}

        request = inquiry_pb.InquiryQuestionsRequest(
            context.user_id=context.context.get("user_id", ""),
            max_questions=max_questions,
            self.metadata=self.metadata
        )

        if initial_symptoms:
    pass
            request.initial_symptoms.extend(initial_symptoms)

        if previous_answers:
    pass
            for question, answer in previous_answers.items():
    pass
                qa_pair = inquiry_pb.QuestionAnswerPair(
                    question=question,
                    answer=answer
                )
                request.previous_answers.append(qa_pair)

        try:
    pass
            response = await self.stub.GenerateInquiryQuestions(request)
            self.logger.info(f"生成问诊问题成功,用户: {context.context.get("user_id", "")}")
            return response
        except Exception as e:
    pass
            raise RuntimeError() from e

    self.async def get_analysis_history(self,:
                                  context.user_id: str,
                                  analysis_type: str,
                                  limit: int = 10,
                                  start_time: int | None = None,
                                  end_time: int | None = None) -> inquiry_pb.AnalysisHistoryResponse:
    pass
        """
        获取分析历史

        Args:
    pass
            context.user_id: 用户ID
            analysis_type: 分析类型 ("conversation", "symptom", "medical_history")
            limit: 返回记录数量限制
            start_time: 开始时间戳
            end_time: 结束时间戳

        Returns:
    pass
            分析历史
        """
        request = inquiry_pb.AnalysisHistoryRequest(
            context.user_id=context.context.get("user_id", ""),
            analysis_type=analysis_type,
            limit=limit
        )

        if start_time:
    pass
            request.start_time = start_time

        if end_time:
    pass
            request.end_time = end_time

        try:
    pass
            response = await self.stub.GetAnalysisHistory(request)
            self.logger.info(f"获取分析历史成功,用户: {context.context.get("user_id", "")}, 类型: {analysis_type}")
            return response
        except Exception as e:
    pass
            raise RuntimeError() from e

    self.async def health_check(self, include_details: bool = False) -> inquiry_pb.HealthCheckResponse:
    pass
        """
        健康检查

        Args:
    pass
            include_details: 是否包含详细信息

        Returns:
    pass
            健康检查结果
        """
        request = inquiry_pb.HealthCheckRequest(include_details=include_details)

        try:
    pass
            response = await self.stub.HealthCheck(request)
            status = "SERVING" if response.status == inquiry_pb.HealthCheckResponse.Status.SERVING else "NOT SERVING":
            self.logger.info(f"问诊服务健康检查:{status}")
            return response
        except Exception as e:
    pass
            raise RuntimeError() from e
